spacing fix

--- a/shared/ui/styles/login.less
+++ b/shared/ui/styles/login.less
@@ -209,7 +209,7 @@
 		}
 
 		.footer {
-			margin-top: 20px;
+			margin: 20px;
 			display: flex;
 			flex-direction: column;
 			align-items: center;
